--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,13 @@ body {
 .img-medium {
     height: 200px;
 }
-
+ .container{
+                width: 800px;
+                color: red;
+                font-family: sans-serif;
+                margin: 0 auto;
+                padding-top: 60px;
+                padding-left: 30px;
+                padding-right: 30px;
+                
+            }
